so here it is, this is about as much as I'm gunna do on this before submitting it

--- a/add_student_to_account.html
+++ b/add_student_to_account.html
@@ -19,8 +19,8 @@
 	<article class="main">
 		<section>
 			<h1>New Student</h1>
-<div id="nav" style="text-align:center;position:center">
-			<form action=confirmation_success.html>
+<div id="nav" style="background-color:#a5cd4e;height:135px;width:550px;border-radius:25px;text-align:center;margin-left:auto;margin-right:auto">
+			<form action=confirmation_success.html><br>
 			<label>First name:</label>
 			<input type="text"/>
 
@@ -33,7 +33,7 @@
 			<input type="submit" value="Go!">
 
 			</form>
-			</div>
+			</div><br>
 			<footer><link rel="stylesheet" type="text/css" href="button.css">
 			<a href="accounts.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
