--- a/assign_award.html
+++ b/assign_award.html
@@ -16,8 +16,8 @@
 	<article class="main">
 		<section>
 			<h1>Award Search</h1>
-<div id="nav" style="text-align:center;position:center">
-			<form action=confirmation_success.html>
+<div id="nav" style="background-color:#a5cd4e;height:125px;width:450px;border-radius:25px;text-align:center;margin-left:auto;margin-right:auto">
+			<form action=confirmation_success.html><br>
 			<select id="select award" style="color: #222200" size="1" name="Awards">
 			<option value="">awards:</option>
 	  		<option value="java1">java master </option>
@@ -27,7 +27,7 @@
 			or new award:<input type="text" name="new_award"><br>
 				<input type="submit" value="Go!">
 			</form>
-			</div>
+			</div><br>
 			<footer>
 			<a href="accounts.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
