--- a/delete_confirm.html
+++ b/delete_confirm.html
@@ -18,8 +18,8 @@
 			<h1>Are You Sure?</h1>
 <div id="nav" style="text-align:center;position:center">
 			<link rel="stylesheet" type="test/css" href="Bigbutton.css">
-			<a href="delete_confirm.html" class="button-main button blue">Yes</a>
-			<a href="index" class="button-main button blue"> No </a>
+			<a href="confirmation_success.html" class="button-main button blue">Yes</a>
+			<a href="index.html" class="button-main button blue"> No </a>
 			</div>
 			<footer>
 			<a href="#" class="button green">back</a>
