--- a/enrollment.html
+++ b/enrollment.html
@@ -21,7 +21,7 @@
 			<h1>enrollment page</h1>
 			
 			<div id= "studentsearch" style ="background-color:#a5cd4e;height:140px;width:440px;border-radius:25px;text-align:center;margin-left:auto;margin-right:auto">
-			<form>
+			<form action="confirmation_success.html">
 				Search by:<br>
 				class Name:<input type="text" name="class name"><br>or<br>
 				class instructor:<input type="text" name="idnum"><br>
