--- a/instructor_classlist.html
+++ b/instructor_classlist.html
@@ -15,8 +15,8 @@
 		<section>
 			<h1>Class Search by Instructor<br>
 			Ritchie, Dennis</h1>
-<div id="nav" style="text-align:center;position:center">
-			<form>
+<div id="nav" style="background-color:#a5cd4e;height:100px;width:450px;border-radius:25px;text-align:center;margin-left:auto;margin-right:auto">
+			<form action = sample_program.html><br>
 			<select id="select class" style="color: #222200" size="1" name="classes">
 			<option value="">classes:</option>
 	  		<option value="c">C programming language for dummies </option>
@@ -29,19 +29,16 @@
 	    		<input type="submit" value="Go!">
 			</form>
 			</div>
-			<div id= "good" style = text-align:center;position:absolute;bottom:390px;left:640px;>
+			<footer>
+			
 			<link rel="stylesheet" type="text/css" href="button.css">
-			<a href="sample_program.html" class="button gray">go!</a>
-			</div>
-			<div id= "income" style = text-align:center;position:absolute;bottom:320px;left:520px;>
-			<link rel="stylesheet" type="text/css" href="button.css">
-			<a href="teacher_income_page.html" class="medbutton green">instructor's income</a>
-			</div>
-			<h2><link rel="stylesheet" type="text/css">
+			<a href="teacher_income_page.html" class="button blue">instructor's income</a>
+			</footer>
+			<footer><link rel="stylesheet" type="text/css">
 			<a href="accounts.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
-			</h2>
+			</footer>
 			<p></p>
 		</section>
 	</article>
