--- a/instructor_index.html
+++ b/instructor_index.html
@@ -10,6 +10,9 @@
 		<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
 		<nav>
 			<ul>
+				<li><a href="programs.html">Programs</a></li>
+				<li><a href="accounts.html">Accounts</a></li>
+				<li><a href="login.html">Logout</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -17,19 +20,20 @@
 		<section>
 			<h1>Welcome to the home page!</h1>
 
-			<div id="nav" style="text-align:center;position:center">
-			<link rel="stylesheet" type="test/css" href="Bigbutton.css">
-			<a href="programs.html" class="Bigbutton blue">Intstructors</a>
-			<a href="accounts.html" class="Bigbutton blue">Schedule</a><br>
-			<a href="accounts.html" class="Bigbutton blue">Students</a>
-			</div>
-			<h2>
-			<a href="login.html"  class="button green">back</a>
-			<a href="homeduh.html" class="button blue">home</a>
-			<a href="login.html" class="button gray">logout</a>
-			</h2>
+			<nav class="nav-main">
+				<a href="instructor_search.html" class="button button-main">Instructors</a>
+				<a href="class_schedule_calendar_page.html" class="button button-main">Schedule</a>
+				<a href="student_search.html" class="button button-main">Students</a>
+			</nav>
 			<p></p>
 		</section>
 	</article>
+	<footer>
+		<nav>
+			<a href="login.html"  class="button green">back</a>
+			<a href="index.html" class="button blue">home</a>
+			<a href="login.html" class="button gray">logout</a>
+		</nav>
+	</footer>
 </body>
 </html>
