--- a/instructor_search.html
+++ b/instructor_search.html
@@ -16,8 +16,8 @@
 	<article class="main">
 		<section>
 			<h1>Instructor Search</h1>
-<div id="nav" style="text-align:center;position:center">
-			<form>
+<div id="edit" style="background-color:#a5cd4e;height:140px;width:400px;border-radius:25px;text-align:center;margin-left:auto;margin-right:auto">
+			<form action = "instructor_classlist.html"><br>
 			<select id="select instructor" style="color: #222200" size="1" name="Instructors">
 			<option value="">Instructors:</option>
 	  		<option value="Cassie">Dowling, Cassie </option>
@@ -30,11 +30,11 @@
 				<input type="submit" value="Go!">
 			</form>
 			</div>
-			<h2><link rel="stylesheet" type="text/css">
+			<footer><link rel="stylesheet" type="text/css">
 			<a href="accounts.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
-			</h2>
+			</footer>
 			<p></p>
 		</section>
 	</article>
