--- a/new_account.html
+++ b/new_account.html
@@ -42,11 +42,16 @@
 			</div>
 			<br><br>
 			<footer><link rel="stylesheet" type="text/css" href="button.css">
+			<a href="new_account_again.html" class="button gray">bad info</a>
+			
+			
+			</footer>
+			<footer><link rel="stylesheet" type="text/css" href="button.css">
 			<a href="accounts.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
 			
-			</div>
+			</footer>
 			<p></p>
 		</section>
 	</article>
