--- a/programs.html
+++ b/programs.html
@@ -15,30 +15,22 @@
 	</header>
 	<article class="main">
 		<section>
+			
 			<h1>Programs</h1>
-
-			<div id="page_content" align="center">
-				<a href="sample_program.html" class="Bigbutton blue">edit program</a>
-				<a href="new_program.html" class="Bigbutton blue">new program</a>
-				<br>
-				<br><br>
-				<b>Select a Program and Click "Edit Program" or Click "Create a New Program"</b>
-				<form>
-					<label>Programs: </label><br>
-					<select id="program_list">
-						<option value="Program1">&lt;Program 1&gt;</option>
-						<option value="Program2">&lt;Program 2&gt;</option>
-						<option value="Program3">&lt;Program 3&gt;</option>
-						<option value="Program4">&lt;Program 4&gt;</option>
-					</select>
-				</form>
+			<div id="nav" style="text-align:center;position:center">
+			<link rel="stylesheet" type="test/css" href="Bigbutton.css">
+			<a href="edit_program.html" class="button-action button blue">edit Program</a>
+			<a href="new_program.html" class="button-action button blue">new Program</a>
 			</div>
-
-			<h2>
-				<a href="index.html" class="button green">back</a>
-				<a href="index.html" class="button blue">home</a>
-				<a href="login.html" class="button gray">logout</a>
-			</h2>
+			
+			<footer><link rel="stylesheet" type="text/css" href="button.css">
+		
+			<a href="index.html" class="button green">back</a>
+			<a href="index.html" class="button blue">home</a>
+			<a href="login.html" class="button gray">logout</a>
+			
+			</footer>
+			
 			<p></p>
 		</section>
 	</article>
