--- a/sample_account.html
+++ b/sample_account.html
@@ -19,10 +19,13 @@
 	<article class="main">
 		<section>
 			<h1>sample account page</h1>
-			<h4>
-			
-			<table border="1">
-			<tr>
+			<div id="_table" style="background-color:#a5cd4e;height:100px;width:200px;border-radius:25px;text-align:center;margin-left:auto;margin-right:auto">
+
+
+
+
+					<table border="0">
+			<tr><br>
 			<td>balance:</td>
 			<td>$857.47</td>
 			</tr>
@@ -31,25 +34,25 @@
 			<td>TOMORROW!</td>
 			</tr>
 			</table>
-			</h4>
-			<h5>
+			</div>
+			<footer>
 			<link rel="stylesheet" type="text/css" href="Medbutton.css">
-			<a href="awards.html" class="Medbutton blue">Awards</a>
-			<a href="schedule.html" class="medbutton blue">Schedule</a>
-			<a href="enrollment.html" class="medbutton blue">Enroll</a><br>
-			<a href="edit_account.html" class="medbutton blue">Edit Account</a>
-			<a href="delete_account.html" class="medbutton blue">Delete Account</a><br>
-			<a href="add_student_to_account.html" class="medbutton blue">Add student</a>
-			<a href="delete_account.html" class="medbutton blue">Delete student</a>
-			<br>
-			</h5>
+			<a href="awards.html" class="button-action button blue">Awards</a>
+			<a href="class_schedule_calendar_page.html" class="button-action button blue">Schedule</a>
+			<a href="enrollment.html" class="button-action button blue">Enroll</a><br>
+			<a href="edit_account.html" class="button-action button blue">Edit Account</a>
+			<a href="delete_account.html" class="button-action button blue">Delete Account</a><br>
+			<a href="add_student_to_account.html" class="button-action button blue">Add student</a>
+			<a href="delete_account.html" class="button-action button blue">Delete student</a>
+			</footer>
 			
-			<h2>
+			<br><br>
+			<footer>
 			<link rel="stylesheet" type="text/css" href="button.css">
 			<a href="accounts.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
-			</h2>
+			</footer>
 			<p></p>
 		</section>
 	</article>
