--- a/sample_student_classes.html
+++ b/sample_student_classes.html
@@ -16,10 +16,14 @@
 	<article class="main">
 		<section>
 			<h1>Sample Student's Classes</h1>
-			<h4>
+			
+			<div id="edit" style="background-color:#a5cd4e;height:150px;width:300px;border-radius:25px;text-align:center;margin-left:auto;margin-right:auto">
 
-			<table border="1">
-			<tr>
+
+
+
+			<table border="0">
+			<tr><br>
 			<td>Yoga</td>
 			<td>M,T,R,S: 8:00-9:00</td>
 			</tr>
@@ -36,14 +40,14 @@
 			<td>M,T,W,R,F: 15:00-17:30</td>
 			</tr>
 			</table>
-			</h4><br><br><br><br>
+			</div><br><br><br><br>
 
 
-			<h2>
-			<a href="#" class="button green">back</a>
-			<a href="#" class="button blue">home</a>
-			<a href="#" class="button gray">logout</a>
-			</h2>
+			<footer>
+			<a href="sample_student.html" class="button green">back</a>
+			<a href="student_page_instructor_view.html" class="button blue">home</a>
+			<a href="login.html" class="button gray">logout</a>
+			</footer>
 			<p></p>
 		</section>
 	</article>
