--- a/student_classes.html
+++ b/student_classes.html
@@ -19,13 +19,13 @@
 	<article class="main">
 		<section>
 			<h1>Classes enrolled in</h1>
-			<h4>
+			<div id="edit" style="background-color:#a5cd4e;height:150px;width:300px;border-radius:25px;text-align:center;margin-left:auto;margin-right:auto">
 			
-			<table border="1">
-			<tr>
-			<td>class</td>
-			<td>instructor</td>
-			<td>time</td>
+			<table border="0">
+			<tr><br>
+			<td><b>class</b></td>
+			<td><b>instructor</b></td>
+			<td><b>time</b></td>
 			</tr>
 			<tr>
 			<td>dog training</td>
@@ -39,13 +39,13 @@
 			</tr>
 
 			</table>
-
-			<h2>
+			</div>
+			<footer>
 			<link rel="stylesheet" type="text/css" href="button.css">
 			<a href="#" class="button green">back</a>
 			<a href="instructor_index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
-			</h2>
+			</footer>
 			<p></p>
 		</section>
 	</article>
