--- a/student_page_instructor_view.html
+++ b/student_page_instructor_view.html
@@ -19,8 +19,8 @@
 	<article class="main">
 		<section>
 			<h1>sample account page</h1>
-			<h4>
-			<table border="1">
+			<div id="edit" style="background-color:#a5cd4e;height:150px;width:300px;border-radius:25px;text-align:center;margin-left:auto;margin-right:auto">
+			<table border="0">
 			<tr>
 			<td>Name:</td>
 			<td>Charlie Liberski</td>
@@ -38,18 +38,18 @@
 			<td>(414)380-7442</td>
 			</tr>
 			</table>
-			</h4><br><br><br><br>
+			</div><br><br><br><br>
 
 			<div id="nav" style="text-align:center;position:center">
 			<link rel="stylesheet" type="test/css" href="medbutton.css">
-			<a href="student_classes.html" class="medbutton blue">classes</a>
-			<a href="student_awards.html" class="medbutton blue">awards</a>
+			<a href="sample_student_classes.html" class="button-main button blue">classes</a>
+			<a href="student_awards.html" class="button-main button blue">awards</a>
 			</div>
-			<h2>
+			<footer>
 			<a href="#" class="button green">back</a>
 			<a href="#" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
-			</h2>
+			</footer>
 			<p></p>
 		</section>
 	</article>
