--- a/teacher_income_page.html
+++ b/teacher_income_page.html
@@ -19,17 +19,24 @@
 	<section>
 		<h1>Teacher Income Page</h1>
 
-		<div id="page_content" align="center">
-			<br>
-			<br><br>
-			&lt;Teacher's Name Here&gt; Makes $&lt;goes here&gt; a year.
-		</div>
-
-		<h2>
+		<div id="tacher" style="background-color:#a5cd4e;height:100px;width:300px;border-radius:25px;text-align:center;margin-left:auto;margin-right:auto">
+			<table border="0">
+			<tr><br>
+			<td>revenue:</td>
+			<td>$12,350</td>
+			</tr>
+			<tr>
+			<td>salaray:</td>
+			<td>$24,072</td>
+			</tr>
+			
+			</table>
+			</div>
+		<footer>
 			<a href="instructor_classlist.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
-		</h2>
+		</footer>
 	</section>
 </article>
 
