--- a/edit_program_again.html
+++ b/edit_program_again.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <head>
 	<meta charset="utf-8">
 	<title>fantastic five program</title>
@@ -5,7 +7,7 @@
 </head>
 <body>
 	<header class="navbar">
-		<div class="brand"></div>
+		<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
 		<nav>
 			<ul>
 			</ul>
@@ -14,39 +16,51 @@
 	<article class="main">
 		<section>
 			<h1>Edit Program</h1>
-<div id="badlog" style = color:red;text-align:center;position:center;>
+			<div id="badlog" style = color:red;text-align:center;position:center;>
 
 			ERROR: information incorrect, try again
 			</div>
-<div id="nav" style="text-align:center;position:center">
-			<form>
-			Program name:<input type="text" name="progName"><br>
-			instructor name:<input type="text" name="instructor"><br>
-			location:<input type="text" name="location"><br>
-			days:<input type="text" name="days"><br>
-			time:<input type="text" name="time"><br>
-			price:<input type="text" name="price1">period:<input type="text" name="period1"><br>
-			price:<input type="text" name="price2">period:<input type="text" name="period2"><br>
+<div id="nav" style="background-color:#a5cd4e;height:300px;width:550px;border-radius:25px;text-align:center;margin-left:auto;margin-right:auto"><br>
+			<form action = confirmation_success.html>
+			<label>Program name:</label>
+			<input type="text"/>
+			<label>instructor name:</label>
+			<input type="text" />
+			<label>location:</label>
+			<input type="text"/>
+			<label>days:</label>
+			<input type="text" />
+			<label>time:</label>
+			<input type="text"/>
+			<label>base price:</label>
+			<input type="text"/>
+			<label>base period:</label>
+			<input type="text"/>
+			<label>discount price:</label>
+			<input type="text" />
+			<label>extended period:</label>
+			<input type="text"/><br><br>
 			<input type="submit" value="Go!">
 			</form>
-			<div id= "good" style = text-align:center;position:absolute;bottom:220px;left:630px;>
+			</div>
+	
+			<footer>
 			<link rel="stylesheet" type="text/css" href="button.css">
 			<a href="confirmation_success.html" class="button gray">good info</a>
-			</div>
-                        <p></p>
-
-			<div id= "bad" style = text-align:center;position:absolute;bottom:190px;left:635px;>
+			
 			<link rel="stylesheet" type="text/css" href="button.css">
 			<a href="edit_program_again.html" class="button gray">bad info</a>
-			</div>
-			</div>
-			<h2><link rel="stylesheet" type="text/css" href="button.css">
+			</footer>
+			
+			<footer>
 			<a href="accounts.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
-			</h2>
+			</footer>
 			<p></p>
 		</section>
 	</article>
 </body>
 </html>
+
+
