--- a/new_program.html
+++ b/new_program.html
@@ -16,29 +16,47 @@
 	<article class="main">
 		<section>
 			<h1>New Program</h1>
-<div id="nav" style="text-align:center;position:center">
-			<a href="sample_program.html" class="Bigbutton blue">Submit Valid</a>
-			<a href="new_program.html" class="Bigbutton blue">Submit Invalid</a>
-				<br>
-				<br><br>
-			<form>
-			Program name:<input type="text" name="progName"><br>
-			instructor name:<input type="text" name="instructor"><br>
-			location:<input type="text" name="location"><br>
-			days:<input type="text" name="days"><br>
-			time:<input type="text" name="time"><br>
-			price:<input type="text" name="price1">period:<input type="text" name="period1"><br>
-			price:<input type="text" name="price2">period:<input type="text" name="period2"><br>
+<div id="nav" style="background-color:#a5cd4e;height:300px;width:550px;border-radius:25px;text-align:center;margin-left:auto;margin-right:auto"><br>
+			<form action = confirmation_success.html>
+			<label>Program name:</label>
+			<input type="text"/>
+			<label>instructor name:</label>
+			<input type="text" />
+			<label>location:</label>
+			<input type="text"/>
+			<label>days:</label>
+			<input type="text" />
+			<label>time:</label>
+			<input type="text"/>
+			<label>base price:</label>
+			<input type="text"/>
+			<label>base period:</label>
+			<input type="text"/>
+			<label>discount price:</label>
+			<input type="text" />
+			<label>extended period:</label>
+			<input type="text"/><br><br>
 			<input type="submit" value="Go!">
 			</form>
 			</div>
-			<h2>
-			<a href="programs.html" class="button green">back</a>
+	
+			<footer>
+			<link rel="stylesheet" type="text/css" href="button.css">
+			<a href="confirmation_success.html" class="button gray">good info</a>
+			
+			<link rel="stylesheet" type="text/css" href="button.css">
+			<a href="edit_program_again.html" class="button gray">bad info</a>
+			</footer>
+			
+			<footer>
+			<a href="accounts.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
-			</h2>
+			</footer>
 			<p></p>
 		</section>
 	</article>
 </body>
 </html>
+
+
