--- a/student_search.html
+++ b/student_search.html
@@ -14,8 +14,9 @@
 	<article class="main">
 		<section>
 			<h1>Student Search</h1>
-<div id="nav" style="text-align:center;position:center">
-			<form>
+
+			<div id="nav" style="background-color:#a5cd4e;height:150px;width:500px;border-radius:25px;text-align:center;margin-left:auto;margin-right:auto">
+			<form action = "sample_account.html">
 			<select id="select student" style="color: #222200" size="5" name="Students">
 			<option value="">Students:</option>
 	  		<option value="Cassie">Dowling, Cassie </option>
@@ -28,15 +29,12 @@
 	    		<input type="submit" value="Go!">
 			</form>
 			</div>
-						<div id= "good" style = text-align:center;position:absolute;bottom:345px;left:640px;>
-			<link rel="stylesheet" type="text/css" href="button.css">
-			<a href="sample_account.html" class="button gray">go!</a>
-			</div>
-			<h2><link rel="stylesheet" type="text/css" href="button.css">
+			<br>
+			<footer><link rel="stylesheet" type="text/css" href="button.css">
 			<a href="accounts.html" class="button green">back</a>
 			<a href="index.html" class="button blue">home</a>
 			<a href="login.html" class="button gray">logout</a>
-			</h2>
+			</footer>
 			<p></p>
 		</section>
 	</article>
