Clean up home page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>fantastic five program</title>
+	<title>Fantastic Five Program</title>
 	<link rel="stylesheet" type="text/css" href="assets/stylesheets/default.css"/>
 </head>
 <body>
@@ -24,14 +24,13 @@
 				<a href="programs.html" class="button button-main">Programs</a>
 				<a href="accounts.html" class="button button-main">Accounts</a>
 			</nav>
-			<p></p>
 		</section>
 	</article>
 	<footer>
 		<nav>
-			<a href="login.html"  class="button green">back</a>
-			<a href="index.html" class="button blue">home</a>
-			<a href="login.html" class="button gray">logout</a>
+			<a href="login.html" class="button green">Back</a>
+			<a href="index.html" class="button blue">Home</a>
+			<a href="login.html" class="button gray">Logout</a>
 		</nav>
 	</footer>
 </body>
