Clean up new account page

--- a/new_account.html
+++ b/new_account.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>fantastic five program</title>
+	<title>Fantastic Five Program</title>
 	<link rel="stylesheet" type="text/css" href="assets/stylesheets/default.css"/>
 </head>
 <body>
@@ -10,50 +10,72 @@
 		<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
 		<nav>
 			<ul>
+				<li><a href="programs.html">Programs</a></li>
+				<li><a href="accounts.html">Accounts</a></li>
+				<li><a href="login.html">Logout</a></li>
 			</ul>
 		</nav>
 	</header>
 	<article class="main">
 		<section>
 			<h1>New Account</h1>
-			<div id="edit" style="background-color:#a5cd4e;height:300px;width:550px;border-radius:25px;text-align:center;margin-left:auto;margin-right:auto">
-			<br>
-			<form action =confirmation_success.html>
-			<label>First name:</label>
-			<input type="text"/>
-			<label>Last name:</label>
-			<input type="text"/>
-			<label>Address line 1:</label>
-			<input type="text"/>
-			<label>Address line 2:</label>
-			<input type="text"/>
-			<label>Postal code:</label>
-			<input type="text" />
-			<label>City:</label>
-			<input type="text"/>
-			<label>State:</label>
-			<input type="text"/>
-			<label>Email:</label>
-			<input style="email"/>
-			<label>Password:</label>
-			<input style ="text"/><br>
-			<input type="submit" value="Go!">
+			<form class="well" action="confirmation_success.html" method="post">
+				<div class="field">
+					<label for="first_name">First name:</label>
+					<input id="first_name" name="first_name" type="text"/>
+				</div>
+
+				<div class="field">
+					<label for="last_name">Last name:</label>
+					<input id="last_name" name="last_name" type="text"/>
+				</div>
+
+				<div class="field">
+					<label for="address_1">Address line 1:</label>
+					<input id="address_1" name="address_1" type="text"/>
+				</div>
+
+				<div class="field">
+					<label for="address_2">Address line 2:</label>
+					<input id="address_2" name="address_2" type="text"/>
+				</div>
+
+				<div class="field">
+					<label for="zip">Postal code:</label>
+					<input id="zip" name="zip" type="text" />
+				</div>
+
+				<div class="field">
+					<label for="city">City:</label>
+					<input id="city" name="city" type="text"/>
+				</div>
+
+				<div class="field">
+					<label for="state">State:</label>
+					<input id="state" name="state" type="text"/>
+				</div>
+
+				<div class="field">
+					<label for="email">Email:</label>
+					<input id="email" name="email" type="email"/>
+				</div>
+
+				<div class="field">
+					<label for="password">Password:</label>
+					<input id="password" name="password" type="text"/><br>
+				</div>
+
+				<input type="submit" class="button" value="Create Account">
+				<a href="new_account_again.html" class="button gray">Submit with bad info</a>
 			</form>
-			</div>
-			<br><br>
-			<footer><link rel="stylesheet" type="text/css" href="button.css">
-			<a href="new_account_again.html" class="button gray">bad info</a>
-			
-			
-			</footer>
-			<footer><link rel="stylesheet" type="text/css" href="button.css">
-			<a href="accounts.html" class="button green">back</a>
-			<a href="index.html" class="button blue">home</a>
-			<a href="login.html" class="button gray">logout</a>
-			
-			</footer>
-			<p></p>
 		</section>
 	</article>
+	<footer>
+		<nav>
+			<a href="accounts.html" class="button green">Back</a>
+			<a href="index.html" class="button blue">Home</a>
+			<a href="login.html" class="button gray">Logout</a>
+		</nav>
+	</footer>
 </body>
 </html>
