Clean up sample account page

--- a/sample_account.html
+++ b/sample_account.html
@@ -1,60 +1,52 @@
+<!DOCTYPE html>
+<html>
 <head>
 	<meta charset="utf-8">
-	<title>fantastic five program</title>
+	<title>Fantastic Five Program</title>
 	<link rel="stylesheet" type="text/css" href="assets/stylesheets/default.css"/>
-
-
-
-
-
 </head>
 <body>
 	<header class="navbar">
-		<div class="brand"></div>
+		<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
 		<nav>
 			<ul>
+				<li><a href="programs.html">Programs</a></li>
+				<li><a href="accounts.html">Accounts</a></li>
+				<li><a href="login.html">Logout</a></li>
 			</ul>
 		</nav>
 	</header>
 	<article class="main">
 		<section>
-			<h1>sample account page</h1>
-			<div id="_table" style="background-color:#a5cd4e;height:100px;width:200px;border-radius:25px;text-align:center;margin-left:auto;margin-right:auto">
-
-
-
-
-					<table border="0">
-			<tr><br>
-			<td>balance:</td>
-			<td>$857.47</td>
-			</tr>
-			<tr>
-			<td>due by:</td>
-			<td>TOMORROW!</td>
-			</tr>
+			<h1>Sample Account Page</h1>
+			<table class="well">
+				<tr>
+					<td>Balance:</td>
+					<td>$857.47</td>
+				</tr>
+				<tr>
+					<td>Due by:</td>
+					<td>Tomorrow</td>
+				</tr>
 			</table>
-			</div>
-			<footer>
-			<link rel="stylesheet" type="text/css" href="Medbutton.css">
-			<a href="awards.html" class="button-action button blue">Awards</a>
-			<a href="class_schedule_calendar_page.html" class="button-action button blue">Schedule</a>
-			<a href="enrollment.html" class="button-action button blue">Enroll</a><br>
-			<a href="edit_account.html" class="button-action button blue">Edit Account</a>
-			<a href="delete_account.html" class="button-action button blue">Delete Account</a><br>
-			<a href="add_student_to_account.html" class="button-action button blue">Add student</a>
-			<a href="delete_account.html" class="button-action button blue">Delete student</a>
-			</footer>
-			
-			<br><br>
-			<footer>
-			<link rel="stylesheet" type="text/css" href="button.css">
-			<a href="accounts.html" class="button green">back</a>
-			<a href="index.html" class="button blue">home</a>
-			<a href="login.html" class="button gray">logout</a>
-			</footer>
-			<p></p>
+
+			<nav class="nav-main">
+				<a href="awards.html" class="button button-action blue">Awards</a>
+				<a href="class_schedule_calendar_page.html" class="button button-action blue">Schedule</a>
+				<a href="enrollment.html" class="button button-action blue">Enroll</a><br>
+				<a href="edit_account.html" class="button button-action blue">Edit Account</a>
+				<a href="delete_account.html" class="button button-action blue">Delete Account</a><br>
+				<a href="add_student_to_account.html" class="button button-action blue">Add student</a>
+				<a href="delete_account.html" class="button button-action blue">Delete student</a>
+			</nav>
 		</section>
 	</article>
+	<footer>
+		<nav>
+			<a href="accounts.html" class="button green">Back</a>
+			<a href="index.html" class="button blue">Home</a>
+			<a href="login.html" class="button gray">Logout</a>
+		</nav>
+	</footer>
 </body>
 </html>
