--- a/programs.html
+++ b/programs.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>fantastic five program</title>
+	<title>Fantastic Five Program</title>
 	<link rel="stylesheet" type="text/css" href="assets/stylesheets/default.css"/>
 </head>
 <body>
@@ -10,29 +10,28 @@
 		<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
 		<nav>
 			<ul>
+				<li><a href="programs.html">Programs</a></li>
+				<li><a href="accounts.html">Accounts</a></li>
+				<li><a href="login.html">Logout</a></li>
 			</ul>
 		</nav>
 	</header>
 	<article class="main">
 		<section>
-			
 			<h1>Programs</h1>
-			<div id="nav" style="text-align:center;position:center">
-			<link rel="stylesheet" type="test/css" href="Bigbutton.css">
-			<a href="edit_program.html" class="button-action button blue">edit Program</a>
-			<a href="new_program.html" class="button-action button blue">new Program</a>
-			</div>
-			
-			<footer><link rel="stylesheet" type="text/css" href="button.css">
-		
-			<a href="index.html" class="button green">back</a>
-			<a href="index.html" class="button blue">home</a>
-			<a href="login.html" class="button gray">logout</a>
-			
-			</footer>
-			
-			<p></p>
+
+			<nav class="nav-main">
+				<a href="edit_program.html" class="button button-main blue">Edit Program</a>
+				<a href="new_program.html" class="button button-main blue">New Program</a>
+			</nav>
 		</section>
 	</article>
+	<footer>
+		<nav>
+			<a href="index.html" class="button green">Back</a>
+			<a href="index.html" class="button blue">Home</a>
+			<a href="login.html" class="button gray">Logout</a>
+		</nav>
+	</footer>
 </body>
 </html>
