--- a/badlogin.html
+++ b/badlogin.html
@@ -1,51 +1,47 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-		<meta charset="utf-8">
-		<title>login</title>
-		<link rel="stylesheet" type="text/css" href="assets/stylesheets/default.css"/>
+	<meta charset="utf-8">
+	<title>Login - Fantastic Five Program</title>
+	<link rel="stylesheet" type="text/css" href="assets/stylesheets/default.css"/>
 </head>
 <body>
-		<header class="navbar">
-				<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
-				<nav>
-						<ul>
-						</ul>
-				</nav>
-		</header>
-		<article class="main">
-				<section>
-			<div id="badlog" style = color:red;text-align:center;position:center;>
-			<br>
-			ERROR: username/password incorrect, try again
+	<header class="navbar">
+		<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
+		<nav>
+			<ul>
+				<li><a href="login.html">Login</a></li>
+			</ul>
+		</nav>
+	</header>
+	<article class="main">
+		<section>
+			<h1>Login</h1>
+			<div class="error-message">
+				ERROR: Username or password is incorrect, try again.
 			</div>
-					
-			<div id="login" style = "background-color:#a5cd4e;height:125px;width:350px;border-radius:25px;text-align:center;margin-left:auto;margin-right:auto">
-			<form>
-			<br>
-			<label>login:</label><input type="text">
-			
-			<label>password:</label><input type="text"/><br>
-			<input type="submit" class="button blue" value = "Go!">
+			<form class="well" action="" method="post">
+				<div class="field">
+					<label for="username">Login:</label>
+					<input id="username" name="username" type="text"/>
+				</div>
+
+				<div class="field">
+					<label for="password">Password:</label>
+					<input id="password" name="password" type="password"/>
+				</div>
+
+				<input type="submit" class="button blue" value="Log In">
 			</form>
-			</div>
-			
-						
-			<footer>
-			<a href="index.html" class="button gray">admin login</a>
 
-
-			<a href="student_page_instructor_view.html" class="button gray">student login</a>
-			</footer>
-			<footer>
-			<a href="instructor_index.html" class="button gray">instructor login</a>
-
-
-			<a href="badlogin.html" class="button gray">bad login</a>
-			</footer>
-						<p></p>
-				</section>
-		</article>
+			<nav class="nav-main">
+				<a href="index.html" class="button gray">Log in as Admin</a>
+				<a href="student_page_instructor_view.html" class="button gray">Log in as Student</a>
+				<br/>
+				<a href="instructor_index.html" class="button gray">Log in as Instructor</a>
+				<a href="badlogin.html" class="button gray">Invalid Login Information</a>
+			</nav>
+		</section>
+	</article>
 </body>
 </html>
