--- a/assign_award.html
+++ b/assign_award.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>fantastic five program</title>
+	<title>Fantastic Five Program</title>
 	<link rel="stylesheet" type="text/css" href="assets/stylesheets/default.css"/>
 </head>
 <body>
@@ -10,31 +10,40 @@
 		<div class="brand"><a href="index.html">Fantastic Five Training Application Prototype</a></div>
 		<nav>
 			<ul>
+				<li><a href="programs.html">Programs</a></li>
+				<li><a href="accounts.html">Accounts</a></li>
+				<li><a href="login.html">Logout</a></li>
 			</ul>
 		</nav>
 	</header>
 	<article class="main">
 		<section>
 			<h1>Award Search</h1>
-<div id="nav" style="background-color:#a5cd4e;height:125px;width:450px;border-radius:25px;text-align:center;margin-left:auto;margin-right:auto">
-			<form action=confirmation_success.html><br>
-			<select id="select award" style="color: #222200" size="1" name="Awards">
-			<option value="">awards:</option>
-	  		<option value="java1">java master </option>
-	  		<option value="dog1">dog whisperer</option>
-				<option value="yoga1">stretch armstrong</option>
-			</select><br>
-			or new award:<input type="text" name="new_award"><br>
-				<input type="submit" value="Go!">
+			<form class="well" action="confirmation_success.html" method="post">
+				<div class="field">
+					<label>Select Award</label>
+					<select id="" name="Awards">
+						<option value="">Choose award...</option>
+						<option value="java1">Java Master</option>
+						<option value="dog1">Dog Whisperer</option>
+						<option value="yoga1">Stretch Armstrong</option>
+					</select>
+				</div>
+				<div class="divider">&lt;OR&gt;</div>
+				<div class="field">
+					<label>Create New Award</label>
+					<input type="text" name="new_award">
+				</div>
+				<input class="button" type="submit" value="Give Award">
 			</form>
-			</div><br>
-			<footer>
-			<a href="accounts.html" class="button green">back</a>
-			<a href="index.html" class="button blue">home</a>
-			<a href="login.html" class="button gray">logout</a>
-			</footer>
-			<p></p>
 		</section>
 	</article>
+	<footer>
+		<nav>
+			<a href="awards.html" class="button green">Back</a>
+			<a href="index.html" class="button blue">Home</a>
+			<a href="login.html" class="button gray">Logout</a>
+		</nav>
+	</footer>
 </body>
 </html>
